fix: grammar and ul spacing

--- a/src/assets/input.css
+++ b/src/assets/input.css
@@ -120,7 +120,7 @@ code {
 article ul {
   list-style-type: disc;
   list-style-position: outside;
-  margin-left: 1rem;
+  margin-left: 1.125rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
@@ -128,7 +128,7 @@ article ul {
 .blog ul {
   list-style-type: disc;
   list-style-position: outside;
-  margin-left: 1rem;
+  margin-left: 1.125rem;
 }
 
 blockquote {
@@ -202,11 +202,6 @@ article .post img {
   .about-description p,
   .about-description a {
     @apply text-xl;
-  }
-
-  article ul,
-  .blog ul {
-    margin-left: 1.0125rem;
   }
 
   .header-border {
